# CC-CppCourse

./: README.md
AnimalRace/: Game.sln
AnimalRace/Game/: Game.vcxproj  Game.vcxproj.filters
AnimalRace/Game/Src/: AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  Game.cpp  Game.hpp  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
Connect3/: Makefile  connect3
Connect3/headers/: typedefs.hpp
Connect3/src/: Actor.class.cpp  Actor.class.hpp  Board.class.cpp  Board.class.hpp  Game.class.cpp  Game.class.hpp  GamePiece.class.cpp  GamePiece.class.hpp  GameState.class.cpp  GameState.class.hpp  Player.class.cpp  Player.class.hpp  Vector2D.class.cpp  Vector2D.class.hpp  main.cpp
CppList/: CMakeLists.txt
CppList/res/: saved.txt
CppList/src/: LinkedList.class.cpp  LinkedList.class.hpp  main.cpp
DateConversion/: CMakeLists.txt
DateConversion/src/: DateConverter.class.cpp  DateConverter.class.hpp  main.cpp
FileManipulator/: CMakeLists.txt
FileManipulator/res/: input.txt
FileManipulator/src/: FileHandler.class.hpp  Filehandler.class.cpp  main.cpp
GuessingGame/: Makefile  connect3
GuessingGame/headers/: includes.hpp  typedefs.hpp
GuessingGame/src/: Actor.class.cpp  Actor.class.hpp  BackGameMenuItem.class.cpp  BackGameMenuItem.class.hpp  EmptyGameMenuItem.class.cpp  EmptyGameMenuItem.class.hpp  ExitGameMenuItem.class.cpp  ExitGameMenuItem.class.hpp  Game.class.cpp  Game.class.hpp  GameEngine.class.cpp  GameEngine.class.hpp  GameState.class.cpp  GameState.class.hpp  Guessing-impl.class.cpp  Guessing.class.cpp  Guessing.class.hpp  Input.class.cpp  Input.class.hpp  MenuHandler.class.cpp  MenuHandler.class.hpp  MenuItem.class.cpp  MenuItem.class.hpp  Player.class.cpp  Player.class.hpp  StartGameMenuItem.class.cpp  StartGameMenuItem.class.hpp  TestGameMenuItem.class.cpp  TestGameMenuItem.class.hpp  Vector2D-impl.class.cpp  Vector2D.class.cpp  Vector2D.class.hpp  main.cpp
HealthRecords/: Makefile
HealthRecords/headers/: includes.hpp
HealthRecords/src/: HealthProfile.class.cpp  HealthProfile.class.hpp  main.cpp
Introduction/: EvenOdd.cpp  MinMaxInt.cpp
MazeCrawler/: CMakeCache.txt  CMakeLists.txt
MazeCrawler/include/macros/: input_macros.hpp  main_game_macros.hpp  maze_macros.hpp  menu_macros.hpp
MazeCrawler/src/: Actor.class.cpp  Actor.class.hpp  ActorHandler.class.cpp  ActorHandler.class.hpp  AsynFuncTimer.class.cpp  GameEngine.class.cpp  GameEngine.class.hpp  GameObject.class.cpp  GameObject.class.hpp  GameObjectHandler.class.cpp  GameObjectHandler.class.hpp  GameState.class.cpp  GameState.class.hpp  GameStateHandler.class.cpp  GameStateHandler.class.hpp  Input.class.cpp  Input.class.hpp  Maze.class.cpp  Maze.class.hpp  MenuHandler.class.cpp  MenuHandler.class.hpp  MenuItem.class.cpp  MenuItem.class.hpp  Player.class.cpp  Player.class.hpp  StaticGameObject.class.cpp  StaticGameObject.class.hpp  StaticGameObjectHandler.class.cpp  StaticGameObjectHandler.class.hpp  StaticRunTimeComponent.class.cpp  StaticRunTimeComponent.class.hpp  Timer.class.cpp  Timer.class.hpp  Vector2D-impl.class.cpp  Vector2D.class.cpp  main.cpp
MazeCrawler/src/GameObjects/: GameObject.class.cpp
MazeCrawler/src/GameObjects/Actors/: Actor.class.cpp  Actor.class.hpp  Input.class.cpp  Maze.class.hpp
MazeCrawler/src/GameObjects/Actors/Charater/: Player.class.cpp
MazeCrawler/src/GameObjects/Actors/Maze/: Maze.class.cpp  Maze.class.hpp  PathFollower.class.cpp  PathFollower.class.hpp
MazeCrawler/src/GameObjects/Actors/MenuItems/: ExitGameItem.class.cpp  MainMenuItem.class.cpp  MainMenuItem.class.hpp  MenuItem.class.cpp  StartGameItem.class.cpp  StartGameItem.class.hpp
MazeCrawler/src/GameState/: GameState.class.cpp  GameState.class.hpp  PlayingState.class.cpp  PlayingState.class.hpp  StartingState.class.cpp  StartingState.class.hpp
MazeCrawler/src/Handlers/: ActorHandler.class.cpp  ActorHandler.class.hpp  GameObjectHandler.class.cpp  GameStateHandler.class.cpp  GameStateHandler.class.hpp  MenuHandler.class.cpp  MenuHandler.class.hpp
MazeCrawler/src/Menu/: Menu.class.cpp
MazeCrawler/src/Timers/: AsynFuncTimer.class.hpp
SignatureAssignment/: main.cpp
SlotMachine/: CMakeLists.txt  License.txt
SlotMachine/include/: includes.hpp
SlotMachine/include/macros/: game_state_macros.hpp  main_macros.hpp
SlotMachine/src/: GameEngine.class.cpp  GameEngine.class.hpp  Vector2D-impl.class.cpp  Vector2D.class.cpp  main.cpp
SlotMachine/src/GameObjects/: GameObject.class.cpp
SlotMachine/src/GameObjects/Actors/: Actor.class.cpp  Input.class.cpp  Input.class.hpp
SlotMachine/src/GameObjects/Actors/Charater/: Player.class.cpp  Player.class.hpp
SlotMachine/src/GameObjects/Actors/MenuItems/: ExitGameItem.class.cpp  ExitGameItem.class.hpp  MainMenuItem.class.cpp  MenuItem.class.cpp  MenuItem.class.hpp  StartGameItem.class.cpp
SlotMachine/src/GameObjects/Actors/SlotMachine/: Numbers.class.cpp  Numbers.class.hpp  SlotMachine.class.cpp  SlotMachine.class.hpp
SlotMachine/src/GameState/: GameState.class.cpp  PlayingState.class.cpp  PlayingState.class.hpp  StartingState.class.cpp  StartingState.class.hpp
SlotMachine/src/Handlers/: ActorHandler.class.cpp  GameObjectHandler.class.cpp  GameStateHandler.class.cpp  GameStateHandler.class.hpp  MenuHandler.class.cpp  MenuHandler.class.hpp
SlotMachine/src/Menu/: Menu.class.cpp  Menu.class.hpp
SlotMachine/src/RandomNumGenerator/: RandNumGen.class.cpp  RandNumGen.class.hpp
SlotMachine/src/Timers/: AsynFuncTimer.class.cpp  AsynFuncTimer.class.hpp  Timer.class.cpp
(+20 files in other folders)
